SLVSCODE-462 Fix horizontal scrollbar on highlighted code diff

--- a/styles/rule.css
+++ b/styles/rule.css
@@ -184,7 +184,7 @@ pre {
 .code-diff {
   padding-left: 1.5rem;
   margin-left: -1.5rem;
-  margin-right: -1.5rem;
+  margin-right: -1rem;
   border-radius: 0;
 }
 
